Adds resources for TechLAB4Kids projects: - Coding K6 - Ruby - Cosima
1.3.2-TL4K002

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ScratchJr",
-    "productName": "ScratchJr",
-    "version": "1.3.2",
+    "productName": "ScratchJr (TechLAB4Kids release)",
+    "version": "1.3.2-TL4K002",
     "description": "ScratchJr Desktop Edition",
     "main": "src/main.js",
     "scripts": {
