--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ScratchJr",
     "productName": "ScratchJr (TechLAB4Kids release)",
-    "version": "1.3.2-TL4K002",
+    "version": "1.3.2-TL4K003",
     "description": "ScratchJr Desktop Edition",
     "main": "src/main.js",
     "scripts": {
@@ -13,7 +13,9 @@
         "make32": "electron-forge make --arch=ia32",
         "makeAll": "electron-forge make --arch=ia32,x64",
         "publish": "electron-forge publish",
-        "lint": "eslint src --color"
+        "lint": "eslint src --color",
+        "pack": "electron-builder --dir",
+        "dist": "electron-builder"
     },
     "keywords": [],
     "author": "ScratchJr - Open Source Community Port",
@@ -125,26 +127,35 @@
         ]
     },
     "dependencies": {
-        "electron-compile": "^6.4.2",
-        "electron-is-dev": "^0.3.0",
+
+        "electron-is-dev": "^2.0.0",
         "electron-squirrel-startup": "^1.0.0",
+        "hoek": "^4.2.1",
         "intl": "^1.2.5",
         "intl-messageformat": "^2.2.0",
         "jszip": "^3.1.5",
         "snapsvg": "^0.5.1",
-        "sql.js": "^0.4.0",
-        "hoek": "^4.2.1"
+        "sql.js": "^0.4.0"
     },
     "devDependencies": {
+        "@electron/rebuild": "^3.2.12",
+        "electron-compile": "^6.4.4",
+        "electron-forge-maker-appimage": "github:Marcus10110/electron-forge-maker-appimage",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
-        "electron-forge": "^4.3.0",
-        "electron-prebuilt-compile": "1.8.2-beta.3",
+        "electron": "^24.1.2",
+        "electron-builder": "^24.2.1",
+        "electron-forge": "^5.2.4",
+        "electron-prebuilt-compile": "8.2.0",
         "eslint": "^3.19.0",
         "eslint-config-airbnb": "^15.1.0",
         "eslint-plugin-import": "^2.11.0",
         "eslint-plugin-jsx-a11y": "^5.1.1",
         "eslint-plugin-react": "^7.7.0"
+    },
+    "build": {
+        "appId": "it.techlab4kids.ScratchJrTL4K",
+        "target": "AppImage"
     }
 }
