--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
     "name": "ScratchJr",
-    "productName": "ScratchJr (TechLAB4Kids release)",
-    "version": "1.3.2-TL4K003",
+    "productName": "ScratchJr-TL4K",
+    "version": "1.3.2-TL4K006",
     "description": "ScratchJr Desktop Edition",
     "main": "src/main.js",
     "scripts": {
         "start": "electron-forge start",
-        "debugMain": "electron-forge start -i",
         "package": "electron-forge package",
         "make": "electron-forge make",
-        "make64": "electron-forge make --arch=x64",
-        "make32": "electron-forge make --arch=ia32",
-        "makeAll": "electron-forge make --arch=ia32,x64",
         "publish": "electron-forge publish",
         "lint": "eslint src --color",
         "pack": "electron-builder --dir",
@@ -127,7 +123,6 @@
         ]
     },
     "dependencies": {
-
         "electron-is-dev": "^2.0.0",
         "electron-squirrel-startup": "^1.0.0",
         "hoek": "^4.2.1",
@@ -135,11 +130,11 @@
         "intl-messageformat": "^2.2.0",
         "jszip": "^3.1.5",
         "snapsvg": "^0.5.1",
-        "sql.js": "^0.4.0"
+        "sql.js": "^0.4.0",
+        "electron-compile": "^6.4.4"
     },
     "devDependencies": {
         "@electron/rebuild": "^3.2.12",
-        "electron-compile": "^6.4.4",
         "electron-forge-maker-appimage": "github:Marcus10110/electron-forge-maker-appimage",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
         "babel-preset-env": "^1.6.1",
@@ -155,7 +150,9 @@
         "eslint-plugin-react": "^7.7.0"
     },
     "build": {
-        "appId": "it.techlab4kids.ScratchJrTL4K",
-        "target": "AppImage"
+        "linux": {
+            "appId": "it.techlab4kids.ScratchJrTL4K",
+            "target": "AppImage"
+        }
     }
 }
