--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ScratchJr",
     "productName": "ScratchJr-TL4K",
-    "version": "1.3.2-TL4K006",
+    "version": "1.3.2-TL4K007",
     "description": "ScratchJr Desktop Edition",
     "main": "src/main.js",
     "scripts": {
@@ -134,20 +134,16 @@
         "electron-compile": "^6.4.4"
     },
     "devDependencies": {
-        "@electron/rebuild": "^3.2.12",
+        "@electron/rebuild": "^3.3.0",
         "electron-forge-maker-appimage": "github:Marcus10110/electron-forge-maker-appimage",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
-        "electron": "^24.1.2",
+        "electron": "^24.8.8",
         "electron-builder": "^24.2.1",
         "electron-forge": "^5.2.4",
-        "electron-prebuilt-compile": "8.2.0",
-        "eslint": "^3.19.0",
-        "eslint-config-airbnb": "^15.1.0",
-        "eslint-plugin-import": "^2.11.0",
-        "eslint-plugin-jsx-a11y": "^5.1.1",
-        "eslint-plugin-react": "^7.7.0"
+        "electron-prebuilt-compile": "8.2.0"
+
     },
     "build": {
         "linux": {
