--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
     "name": "ScratchJr",
     "productName": "ScratchJr-TL4K",
-    "version": "1.3.2-TL4K007",
+    "version": "1.3.2-TL4K008",
     "description": "ScratchJr Desktop Edition",
     "main": "src/main.js",
     "scripts": {
         "start": "electron-forge start",
+        "startWeb": "webpack-dev-server",
+        "buildWeb": "webpack",
+        "debugMain": "electron-forge start -i",
         "package": "electron-forge package",
         "make": "electron-forge make",
+        "make64": "electron-forge make --arch=x64",
+        "make32": "electron-forge make --arch=ia32",
+        "makeAll": "electron-forge make --arch=ia32,x64",
         "publish": "electron-forge publish",
         "lint": "eslint src --color",
         "pack": "electron-builder --dir",
@@ -123,15 +129,16 @@
         ]
     },
     "dependencies": {
-        "electron-is-dev": "^2.0.0",
+        "electron-compile": "^6.4.2",
+        "electron-is-dev": "^0.3.0",
         "electron-squirrel-startup": "^1.0.0",
-        "hoek": "^4.2.1",
         "intl": "^1.2.5",
         "intl-messageformat": "^2.2.0",
-        "jszip": "^3.1.5",
+        "jszip": "^3.10.1",
         "snapsvg": "^0.5.1",
         "sql.js": "^0.4.0",
-        "electron-compile": "^6.4.4"
+        "hoek": "^4.2.1",
+        "mock-fs": "^5.2.0"
     },
     "devDependencies": {
         "@electron/rebuild": "^3.3.0",
@@ -142,8 +149,18 @@
         "electron": "^24.8.8",
         "electron-builder": "^24.2.1",
         "electron-forge": "^5.2.4",
-        "electron-prebuilt-compile": "8.2.0"
-
+        "electron-prebuilt-compile": "1.8.4",
+        "babel-plugin-transform-async-to-generator": "^6.24.1",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-react": "^6.24.1",
+        "copy-webpack-plugin": "^12.0.1",
+        "html-webpack-plugin": "^5.6.0",
+        "imports-loader": "^4.0.1",
+        "terser-webpack-plugin": "^5.3.10",
+        "webpack": "^5.89.0",
+        "webpack-bundle-analyzer": "^4.10.1",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
     },
     "build": {
         "linux": {
