Adds resources for TechLAB4Kids projects: - Coding K6
1.3.2-TL4K011

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ src/app/src/editor/.DS_Store
 .DS_Store
 buglist.txt
 src/debug.log
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/codeStyles/Project.xml
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/ScratchJr-Desktop.iml
+/.idea/vcs.xml
